--- a/src/app/scorecard/style.module.css
+++ b/src/app/scorecard/style.module.css
@@ -110,7 +110,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    width: 100%;
+    margin: 2rem auto;
+    /* height: 100%; */
     /* background-color: red; */
 }
 
@@ -124,13 +126,22 @@
 }
 
 .img1 {
-    animation: leftcenter 2s ease;
+    animation-name: leftcenter, leftcenter2;
+    animation-delay: 0s, 7s;
+    animation-duration: 2s, 2s;
+    animation-fill-mode: forwards ,forwards;
+    animation-timing-function: ease , ease;
 }
 
 .img2 {
-    animation: topcenter 2s ease;
+    animation-name: topcenter ,topcenter2;
+    animation-delay: 0s ,7s;
+    animation-duration: 2s, 2s;
+    animation-fill-mode: forwards ,forwards;
+    animation-timing-function: ease , ease;
 }
-.textT{
+
+.textT {
     font-size: 2rem;
     font-weight: bold;
     letter-spacing: 1px;
@@ -138,6 +149,75 @@
     text-align: center;
     position: relative;
     animation: topcenter 2s ease;
+}
+
+.scoreCardT {
+    background-color: white;
+    box-shadow: 2px 2px 10px black;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* width: min(80%, 10rem); */
+    width: 15rem;
+    padding: 1rem;
+    aspect-ratio: 1/1;
+    animation-delay: 12s;
+    position: absolute;
+    animation-name: topcenterFixed;
+    animation-duration: 2s;
+    animation-delay: 4s;
+    animation-fill-mode: forwards;
+    margin-top: -200%;
+    opacity: 0;
+    position: relative;
+}
+
+.scoreCardT img {
+    width: 5rem;
+    height: 5rem;
+}
+
+.cardBodyT {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.331);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    animation-delay: 3.5s;
+    animation-duration: 2s;
+    animation-name: opacityscale;
+    animation-fill-mode: forwards;
+    opacity: 0;
+
+}
+
+@keyframes opacityscale {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes topcenterFixed {
+    from {
+        opacity: 0;
+        margin-top: -200%;
+    }
+
+    to {
+        margin-top: 0;
+        opacity: 1;
+    }
 }
 
 @keyframes leftcenter {
@@ -152,6 +232,17 @@
     }
 }
 
+@keyframes leftcenter2 {
+    from {
+        opacity: 0.7;
+    }
+
+    to {
+        opacity: 1;
+        left: -8rem;
+    }
+}
+
 @keyframes topcenter {
     from {
         opacity: 0;
@@ -160,6 +251,18 @@
 
     to {
         top: 0%;
+        opacity: 1;
+    }
+}
+
+@keyframes topcenter2 {
+    from {
+        opacity: 0.7;
+        left: 0rem;
+    }
+
+    to {
+        left: 5rem;
         opacity: 1;
     }
 }
