--- a/src/app/scorecard/style.module.css
+++ b/src/app/scorecard/style.module.css
@@ -153,7 +153,7 @@
 
 .scoreCardT {
     background-color: white;
-    box-shadow: 2px 2px 10px black;
+    box-shadow: 2px 7px 21px rgba(0, 0, 0, 0.402);
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -186,6 +186,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.331);
+    backdrop-filter: blur(20px);
     top: 0;
     left: 0;
     width: 100%;
